# prob_rob_labs

./: frames.gv  measurement_model_sympy_test.py
Python Script Tests/: satellites moving.py
labs/: CMakeLists.txt  package.xml  red.txt  setup.py
labs/config/: landmark.yaml
labs/datalog/: cyan.txt  green.txt  magenta.txt  red.txt  yellow.txt
labs/launch/: calc_error.launch  cond_prob.launch  corresp_matcher.launch  ekf_landmar_loc.launch  ekf_landmark_loc.launch  ekf_tf.launch  gps_error.launch  jackal_and_door.launch  jackal_door_and_firetruck.launch  measurement_predictor.launch  odom_tracking.launch  opendoor_movebot.launch  satellite_mmt_pred.launch  satellite_simu.launch  state.launch
labs/src/calc_error/: calc_error.py
labs/src/cond_prob/: cond_prob.py
labs/src/corresp_matcher/: corresp_matcher.py
labs/src/ekf_landmar_loc/: ekf_landmar_loc.py
labs/src/ekf_landmark_loc/: ekf_landmark_loc.py
labs/src/ekf_tf/: ekf_tf.py
labs/src/gps_error/: gps_error.py
labs/src/image_mean_feature_x/: image_mean_feature_x.py
labs/src/measurement_predictor/: measurement_predictor.py
labs/src/odom_tracking/: odom_tracking.py
labs/src/opendoor_movebot/: opendoor_movebot.py
labs/src/satellite_mmt_pred/: satellite_mmt_pred.py
labs/src/satellite_simu/: satellite_simu.py
labs/src/state/: state.py
misc/: spin.py
msg/: SatelliteState.msg
tools/: measurement_error_plot_tool.py
